added pagination filtres
